# Lecoo-Control-Center

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_CN.md  README_RU.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/locales/: cn.yml  en.yml  ru.yml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: handlers.rs  main.rs
daemon/src/ec/: mod.rs  offsets.rs  sys_linux.rs  sys_windows.rs
daemon/src/ec/hw/: fan.rs  flexicharger.rs  getters.rs  kbd_backlight.rs  led.rs  power_profile.rs
daemon/src/handlers/: flexicharger.rs  getters.rs  kbd_backlight.rs  led.rs  mod.rs
daemon/src/services/: mod.rs  systemd_service.rs  win_service.rs
gui/: Cargo.toml
ipc/: Cargo.toml
ipc/src/: client.rs  lib.rs  server.rs  structs.rs
scripts/windows/: install.bat  uninstall.bat
telemetry_server/src/: main.rs
