[workspace]
members = [
    "ipc",
    "daemon",
    "cli",
    "gui",
    "telemetry_server"
]
resolver = "2"

[workspace.package]
version = "0.3.1"
authors = ["LaVashikk <contact@lavashik.dev>"]
description = "A cross-platform Rust daemon and CLI/GUI for controlling fans, TDP, battery limits, and LED on Lecoo/Emdoor laptops (IT5570/IT5571 EC)."
repository = "https://github.com/LaVashikk/Lecoo-Control-Center"
license = "MIT"
