[package]
name = "lecoo-ec-daemon"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition = "2024"

[dependencies]
bincode = "2.0"
anyhow = "1.0"
log = "0.4"
ureq = "3.2.0"
ipc = { path = "../ipc" }

[target.'cfg(windows)'.dependencies]
simplelog = "0.11"
libloading = "0.9.0"
windows-service = "0.8"
file-rotate = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
systemd-journal-logger = "2.1.1"
